; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_provider.c_OSSL_PROVIDER_add_builtin.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_provider.c_OSSL_PROVIDER_add_builtin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CRYPTO_F_OSSL_PROVIDER_ADD_BUILTIN = common dso_local global i32 0, align 4
@ERR_R_PASSED_NULL_PARAMETER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OSSL_PROVIDER_add_builtin(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* null, i32** %8, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i32*, i32** %7, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %11, %3
  %15 = load i32, i32* @CRYPTO_F_OSSL_PROVIDER_ADD_BUILTIN, align 4
  %16 = load i32, i32* @ERR_R_PASSED_NULL_PARAMETER, align 4
  %17 = call i32 @CRYPTOerr(i32 %15, i32 %16)
  store i32 0, i32* %4, align 4
  br label %28

18:                                               ; preds = %11
  %19 = load i32*, i32** %5, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = call i32* @ossl_provider_new(i32* %19, i8* %20, i32* %21, i32 0)
  store i32* %22, i32** %8, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %25

24:                                               ; preds = %18
  store i32 0, i32* %4, align 4
  br label %28

25:                                               ; preds = %18
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @ossl_provider_free(i32* %26)
  store i32 1, i32* %4, align 4
  br label %28

28:                                               ; preds = %25, %24, %14
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @CRYPTOerr(i32, i32) #1

declare dso_local i32* @ossl_provider_new(i32*, i8*, i32*, i32) #1

declare dso_local i32 @ossl_provider_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
